# c-sdk

./: CMakeLists.txt  README.md
docs/: AI_DEVELOPMENT_GUIDE.md  API_RECORDS.md  API_RULES_AND_FILTERS.md  AUTHENTICATION.md  BACKUPS_API.md  CACHE_API.md  COLLECTIONS.md  COLLECTIONS_EXTRA.md  COLLECTION_API.md  CRONS_API.md  FILES.md  FILE_API.md  GRAPHQL.md  HEALTH_API.md  LANGCHAINGO_API.md  LLM_DOCUMENTS.md  LOGS_API.md  MANAGEMENT_API.md  OAUTH2_CONFIGURATION.md  PUBSUB_API.md  REALTIME.md  RELATIONS.md  SCHEMA_QUERY_API.md  USERS_COLLECTION_GUIDE.md  VECTOR_API.md  api-rules.md
include/: bosbase_c.h
src/: bosbase_c.cpp
